<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animation"
            android:icon="@drawable/ic_menu_animation"
            android:title="@string/main_drawer_animation" />
        <item
            android:id="@+id/nav_graphics"
            android:icon="@drawable/ic_menu_graphics"
            android:title="@string/main_drawer_graphics" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_image"
            android:title="@string/main_drawer_image" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_audio"
            android:title="@string/main_drawer_audio" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/main_drawer_video" />
    </group>

</menu>
